TEST_PROGRAMS/INVALID/09/continue_outside_loop.go
package continue_outise

func main() {
    switch os := runtime.GOOS; os {
    case "darwin":
        continue
    default:
        break
    }
}
